<resources>
    <string name="app_name">ryazanceva</string>
    <string name="todo">TODO</string>
    <string name="quick_delivery_at_your_doorstep">Quick Delivery At Your Doorstep</string>
    <string name="enjoy_quick_pick_up_and_delivery_to_your_destination">Enjoy quick pick-up and delivery to your destination</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="flexible_payment">Flexible Payment</string>
    <string name="different_modes_of_payment_either_before_and_after_delivery_without_stress">Different modes of payment either before and after delivery without stress</string>
    <string name="real_time_tracking">Real-time Tracking</string>
    <string name="sign_up">Sign Up</string>
    <string name="track_your_packages_items_from_the_comfort_of_your_home_till_final_destination">Track your packages/items from the comfort of your home till final destination</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="complete_the_sign_up_process_to_get_started">Complete the sign up process to get started</string>
    <string name="ivanov_ivan">Ivanov Ivan</string>
    <string name="by_ticking_this_box_you_agree_to_our">By ticking this box, you agree to our</string>
    <string name="terms_and">Terms and</string>
    <string name="conditions_and_private_policy">conditions and private policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_sign_in_using">or sign in using</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_an_account1">Create an account</string>
    <string name="complete_the_sign_up_process_to_get_started1">Complete the sign up process to get started</string>
    <string name="mail_com">***********@mail.com</string>
    <string name="ivanov_ivan12">Ivanov Ivan</string>
    <string name="todo123">TODO</string>
    <string name="password">Password</string>
    <string name="jk">**********</string>
    <string name="_7_999_999_99_99">+7(999)999-99-99</string>
    <string name="qed">**********</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account214">Already have an account?</string>
    <string name="fill_in_your_email_and_password_to_continue">Fill in your email and password to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password2">Password</string>
    <string name="email_address243">Email Address</string>
    <string name="remember_password">Remember password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log in</string>
    <string name="sing_up">Sing Up</string>
    <string name="forgot_password23">Forgot Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="email_address23">Email Address</string>
    <string name="mail_com3">***********@mail.com</string>
    <string name="gghj">**********</string>
    <string name="fgh">***********@mail.com</string>
    <string name="already_have_an_account23">Already have an account?</string>
    <string name="remember_password_back_to">Remember password? Back to</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="new_password">New Password</string>
    <string name="fvbh">Password</string>
    <string name="confirm_password32">Confirm Password</string>
    <string name="log_in54">Log in</string>
    <string name="home">Home</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_6_digit_numbers_sent_to_your_email">Enter the 6 digit numbers sent to your email</string>
    <string name="if_you_didn_t_receive_code">If you didn’t receive code,</string>
    <string name="if_you_didn_t_receive_code_resend_after">If you didn’t receive code, resend after</string>
    <string name="set_new_password">Set New Password</string>
    <string name="new_password213">New Password</string>
    <string name="password2421">Password</string>
    <string name="dfgf">*******</string>
</resources>