<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_an_account1"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/complete_the_sign_up_process_to_get_started1"
                    android:textColor="@color/ggr"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name"
                        android:textColor="@color/gray"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/Fio"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/input_border"
                        android:ems="10"
                        android:hint="@string/ivanov_ivan12"
                        android:inputType="textPersonName"
                        android:padding="14dp"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textColor="@color/gray"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/Phone"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/input_border"
                        android:ems="10"
                        android:hint="@string/_7_999_999_99_99"
                        android:inputType="phone"
                        android:padding="14dp"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/gray"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_address"
                        android:textColor="@color/gray"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/EmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/input_border"
                        android:ems="10"
                        android:hint="@string/mail_com"
                        android:inputType="textEmailAddress"
                        android:padding="14dp"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/gray"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#922B2B"
                        android:text="@string/password"
                        android:textColor="@color/gray"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/input_border"
                        android:ems="10"
                        android:hint="@string/jk"
                        android:inputType="textPassword"
                        android:padding="14dp"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password"
                        android:textColor="@color/gray"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/conf"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/input_border"
                        android:ems="10"
                        android:hint="@string/qed"
                        android:inputType="textPassword"
                        android:padding="14dp"
                        android:textColorHint="@color/gray"
                        android:textSize="14sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:orientation="horizontal"
                    tools:ignore="TextSizeCheck">

                    <CheckBox
                        android:id="@+id/checkBoxLogin"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:buttonTint="@drawable/checkbox_filter_tint"
                        tools:ignore="TouchTargetSizeCheck" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/by_ticking_this_box_you_agree_to_our"
                                android:textColor="#757575"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/terms_and"
                                android:textColor="@color/yel"
                                android:textSize="12sp"
                                tools:ignore="NestedWeights,TextContrastCheck" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/conditions_and_private_policy"
                            android:textColor="@color/yel"
                            android:textSize="12sp"
                            tools:ignore="TextContrastCheck" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="342dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:backgroundTint="@color/ggr"
                android:bottomLeftRadius="5dp"
                android:bottomRightRadius="100dp"
                android:onClick="signUp"
                android:text="@string/sing_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="5dp"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="LogIn"
                    android:text="@string/log_in"
                    android:textColor="@color/blur"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/or_sign_in_using"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google"
                    android:contentDescription="@string/todo123" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>