<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layerType="none"
    android:outlineSpotShadowColor="#000000"
    tools:context=".MainActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="436dp"
                android:onClick="Tick1"
                android:orientation="horizontal"
                tools:ignore="UselessParent,SpeakableTextPresentCheck">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="335dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="23dp"
                    android:layout_weight="1"
                    android:src="@drawable/rafiki"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:text="@string/real_time_tracking"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#0560FA"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="286dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/track_your_packages_items_from_the_comfort_of_your_home_till_final_destination"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:typeface="normal"
                tools:ignore="TextSizeCheck" />

            <LinearLayout
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/blur"
                    android:onClick="signUp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    app:cornerRadius="4.96dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="272dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/already_have_an_account214" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="signIn"
                    android:text="@string/sign_in"
                    android:textColor="@color/blur"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>