<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layerType="none"
    android:outlineSpotShadowColor="#000000"
    tools:context=".MainActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="436dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="335dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="23dp"
                    android:layout_weight="1"
                    android:src="@drawable/rafiki"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:text="@string/flexible_payment"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#0560FA"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="231dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/different_modes_of_payment_either_before_and_after_delivery_without_stress"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:typeface="normal"
                tools:ignore="TextSizeCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_marginTop="120dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="100dp"
                    android:layout_height="58dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="160dp"
                    android:backgroundTint="@color/white"
                    android:onClick="Tick1"
                    android:text="@string/skip"
                    android:textAllCaps="false"
                    android:textColor="@color/blur"
                    app:cornerRadius="5dp"
                    app:strokeColor="#0560FA"
                    app:strokeWidth="1dp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/button2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/blur"
                    android:onClick="Tick2"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    app:cornerRadius="4.96dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>